# prometheus

./: README.md  compile.sh
book-cs/: Jatra-Prometheova.md
book-cs/appendices/: a-instrukce-z80-pouzite-neobvyklymi-zpusoby.md  b-sluzby-rom-a-systemove-promenne-zx-spectra.md  c-mapy-pameti.md  d-kompaktni-datove-formaty.md  e-prikazy-klavesy-a-uzivatelske-rozhrani.md  f-rejstrik-rutin-a-tabulek.md  (+1 more)
book-en/: The-Liver-of-Prometheus.md
d80/: prometheus-d80.tap  prometheus.d80  source-d80.tap  source.d80
doc/: Prometheus - english.html  Prometheus.txt  Prometheus48+128.doc  Prometheus48+128.txt  prometheus-manual(czech).TXT  prometheus48+128(english).txt  prometheus_cz.sxw
original/: prometheus.bin.hex  readme.txt
prometheus-tap2asm/: CHANGELOG.md  CMakeLists.txt  Makefile  README.md
prometheus-tap2asm/docs/: BETADISK-TRDOS.md  FORMAT.md  OUTPUT-FORMATTING.md  RELEASE-VERIFICATION.txt  TESTING.md
prometheus-tap2asm/include/: promtap.h
prometheus-tap2asm/src/: instructions.inc  main.c  promtap.c  promtap_internal.h  trdos.c
prometheus-tap2asm/tests/: instruction_cases.inc  test_cli.sh  test_core.c
prometheus-tap2asm/tools/: generate_instruction_table.py
src/: blocks.txt  configurationPatchTable.asm  instructionTable.asm  patch.txt  prometheus-flow3.asm  prometheus-raw-filtered.asm  prometheus-raw.asm  prometheus.asm  relocationTable.asm
src-d80/: README.md  verify.sh
support/: prometheus-raw.asm
tap/: prometheus-48.tap
tools/: build_tap_from_template.py
trd/: prometheus48_trdos patch source.trd  trdos-prometheus48.trd
(+232 files in other folders)
